kubernetes-nodejs/node-app-app-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: node-app-app-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/node-app-app-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/node-app-app-network: "true"
